fix(footer) align social icons to headline

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_footer.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_footer.scss
@@ -110,7 +110,7 @@ footer.content-info .author .contribute {
 
   footer.content-info .links ul.social {
     text-align: left;
-    width: 150px;
+    width: 105px;
     margin: 0 auto;
   }
 
